if A_REX_SERVICE_ENABLED
AREX_SERVICE = a-rex
else
AREX_SERVICE =
endif

if GRIDFTPD_SERVICE_ENABLED
GRIDFTPD_SERVICE = gridftpd
else
GRIDFTPD_SERVICE =
endif

if MONITOR_ENABLED
MONITOR = monitor
else
MONITOR =
endif

if CANDYPOND_ENABLED
CANDYPOND_SERVICE = candypond
else
CANDYPOND_SERVICE =
endif

if DATADELIVERY_SERVICE_ENABLED
DATADELIVERY_SERVICE = data-staging
else
DATADELIVERY_SERVICE =
endif

SUBDIRS = $(GRIDFTPD_SERVICE) $(AREX_SERVICE) \
	$(MONITOR) \
	$(CANDYPOND_SERVICE) \
	$(DATADELIVERY_SERVICE) \
	wrappers examples
DIST_SUBDIRS = gridftpd a-rex \
	monitor \
	candypond \
	data-staging \
	wrappers examples

