if WIN32
GRIDMAP =
ARCCONFCONVERT =
ARCCONFCONVERTMAN =
else
GRIDMAP = gridmap
ARCCONFCONVERT = arcconfconvert
ARCCONFCONVERTMAN = arcconfconvert.1
endif

bin_SCRIPTS = $ARCCONFCONVERT
man_MANS = $ARCCONFCONVERTMAN

if HED_ENABLED
BUILD_SOURCES = hed $(GRIDMAP) testing
else
BUILD_SOURCES = $(GRIDMAP) testing
endif

SUBDIRS = $(BUILD_SOURCES)
DIST_SUBDIRS = hed gridmap testing

