if WIN32
GRIDMAP =
NGCLIENT2ARC =
NGCLIENT2ARCMAN =
else
GRIDMAP = gridmap
NGCLIENT2ARC = ngclient2arc
NGCLIENT2ARCMAN = ngclient2arc.1
endif

bin_SCRIPTS = $(NGCLIENT2ARC)
man_MANS = $(NGCLIENT2ARCMAN)

if HED_ENABLED
BUILD_SOURCES = hed $(GRIDMAP) testing
else
BUILD_SOURCES = $(GRIDMAP) testing
endif

SUBDIRS = $(BUILD_SOURCES)
DIST_SUBDIRS = hed gridmap testing

EXTRA_DIST = $(bin_SCRIPTS)

